# CI_test_on_github_actions

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  ubuntu.yml  windows.yml
src/: boost_compile_test.cpp  boost_test.cpp  greet_main.cpp  say_hello.cpp  say_hello.hpp
